src/test/deca/context/valid/improvided/op_un_not.deca
// Description:
//	Test de not appliqué sur un boolean 
// Resultats:
//	ok
{
	int x = 3;
	int z = 5;
	boolean t;
	t = !(z==x);
}
